updated semantic elements

--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
 	<meta charset="utf-8">
 </head>
 <body>
-	<div>
+	<header>
 		<!-- Header -->
 		<h1>Tech Store</h1>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="">Shop</a></li>
-			<li><a href="contact.html">Contact Us</a></li>
-		</ul>
-	</div>
-	<div>
-		<!-- left column -->
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="">Shop</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
+			</ul>
+		</nav>
+	</header>
+	<!-- aside section -->
+	<aside>
 		<h2>Shop by:</h2>
-		<h3>Category</h3>
+		<!-- category section -->
+		<section>
+			<h3>Category</h3>
 		<ul>
 			<li>All Items</li>
 			<li>Cameras</li>
@@ -26,7 +30,10 @@
 			<LI>Accesories</LI>
 			<li>Other</li>
 		</ul>
-		<h3>Prize ($)</h3>
+		</section>
+ 		<!-- prize section -->
+		<section>
+			<h3>Prize ($)</h3>
 		<ul>
 			<li>1-9</li>
 			<li>10-29</li>
@@ -34,10 +41,11 @@
 			<li>60-99</li>
 			<li>100 +</li>
 		</ul>
-	</div>
-	<div>
+		</section>
+	</aside>
+	<!-- product section main -->
+	<main>
 			<h2>All items:</h2>
-			<!-- product section -->
 			<div>
 				<a href="product-detail.html" title="Product details">
 					<img src="img/controller.jpg" alt="game-controller">
@@ -48,16 +56,17 @@
 				<a href="product-detail.html">More Info</a>
 				<a href="">Add To Cart</a>
 			</div>
-	</div>
-
-	<div>
-		<!-- footer -->
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="">Shop</a></li>
-			<li><a href="contact.html">Contact Us</a></li>
-		</ul>
-	</div>
+	</main>
+	<!-- footer -->
+	<footer>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="">Shop</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
+			</ul>
+		</nav>
+	</footer>
 
 </body>
 </html>
