--- a/index.html
+++ b/index.html
@@ -56,6 +56,70 @@
 				<a href="product-detail.html">More Info</a>
 				<a href="">Add To Cart</a>
 			</div>
+			<!-- white headphones -->
+			<div>
+				<a href="product-detail.html" title="Product details">
+					<img src="img/headphones.jpg">
+				</a>
+				<h4><a href="product-detail.html">White Headphones</a></h4>
+				<p>$ 54.95</p>
+				<p>Awesome white headphones</p>
+				<a href="product-detail.html">More Info</a>
+				<a href="">Add To Cart</a>
+			</div>
+			<!-- canon camera -->
+			<div>
+				<a href="product-detail.html" title="Product details">
+					<img src="img/camera.jpg">
+				</a>
+				<a href="product-detail.html">
+					<h4>Canon Camera</h4>
+				</a>
+				<p>$ 649.95</p>
+				<p>Awesome Camera by Canon</p>
+				<a href="product-detail.html">More Info</a>
+				<a href="">Add To Cart</a>
+			</div>
+			<!-- yeti microphone -->
+			<div>
+				<a href="product-detail.html">
+					<img src="img/microphone.jpg" title="Product details">
+				</a>
+				<a href="product-detail.html">
+					<h4>Yeti Microphone</h4>			
+				</a>
+				<p>$ 120.95</p>
+				<p>Awesome Blue Yeti Microphone</p>
+				<a href="product-detail.html">More Info</a>
+				<a href="">Add To Cart</a>
+			</div>
+			<!-- cables -->
+			<div>
+				<a href="product-detail.html">
+					<img src="img/cables.jpg" title="Product details">
+				</a>
+				<a href="product-detail.html">
+					<h4>Cables</h4>
+				</a>
+				<p>$ 10.95</p>
+				<p>Awesome cables available in different lengths</p>
+				<a href="product-detail.html">More Info</a>
+				<a href="">Add To Cart</a>
+			</div>
+			<!-- camera lenses -->
+			<div>
+				<a href="product-detail.html">
+					<img src="img/lenses.jpg" title="Product details">
+				</a>
+				<a href="product-detail.html">
+					<h4>Camera Lenses</h4>
+				</a>
+				<p>$ 99.95</p>
+				<p>Awesome Camera Lenses</p>
+				<a href="product-detail.html">More Info</a>
+				<a href="">Add To Cart</a>
+			</div>
+
 	</main>
 	<!-- footer -->
 	<footer>
