--- a/product-detail.html
+++ b/product-detail.html
@@ -1,1 +1,69 @@
-product detail
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Tech Store</title>
+	<meta charset="utf-8">
+</head>
+<body>
+	<!-- header -->
+	<header>
+		<h1>Tech Store</h1>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="">Shop</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
+			</ul>
+		</nav>
+	</header>
+
+	<aside>
+		<h2>Shop by:</h2>
+		<section>
+			<h3>Category</h3>
+			<ul>
+				<li>All items</li>
+				<li>Cameras</li>
+				<li>Laptops</li>
+				<li>Phones</li>
+				<li>Accesories</li>
+				<li>Other</li>
+			</ul>
+		</section>
+
+		<section>
+			<h3>Price ($)</h3>
+			<ul>
+				<li>1-9</li>
+				<li>10-29</li>
+				<li>30-59</li>
+				<li>60-99</li>
+				<li>100 +</li>
+			</ul>
+		</section>
+	</aside>
+
+	<main>
+		<h2>All items:</h2>
+		<div>
+			<img src="img/controller.jpg">
+			<h4>Game controller</h4>
+			<p>$ 79.95</p>
+			<p>Awesome game controller <br> for xbox!</p>
+			<a href="">More Info</a>
+			<a href="">Add To Cart</a>
+		</div>
+	</main>
+
+	<footer>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="">Shop</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
+			</ul>
+		</nav>
+	</footer>
+
+</body>
+</html>
