started doing the contact us page. Added the html for the contacr forms

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>tech-store</title>
+	<title>Tech store</title>
 	<meta charset="utf-8">
 </head>
 <body>
@@ -22,6 +22,7 @@
 		<!-- category section -->
 		<section>
 			<h3>Category</h3>
+			<hr>
 		<ul>
 			<li>All Items</li>
 			<li>Cameras</li>
@@ -34,6 +35,7 @@
  		<!-- prize section -->
 		<section>
 			<h3>Prize ($)</h3>
+			<hr>
 		<ul>
 			<li>1-9</li>
 			<li>10-29</li>
