--- a/product-detail.html
+++ b/product-detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Tech Store</title>
+	<title>Tech Store: Product details</title>
 	<meta charset="utf-8">
 </head>
 <body>
@@ -21,6 +21,7 @@
 		<h2>Shop by:</h2>
 		<section>
 			<h3>Category</h3>
+			<hr>
 			<ul>
 				<li>All items</li>
 				<li>Cameras</li>
@@ -33,6 +34,7 @@
 
 		<section>
 			<h3>Price ($)</h3>
+			<hr>
 			<ul>
 				<li>1-9</li>
 				<li>10-29</li>
@@ -53,6 +55,30 @@
 			<a href="">More Info</a>
 			<a href="">Add To Cart</a>
 		</div>
+
+		<table>
+			<caption>Buy in bulk and save!</caption>
+			<thead>
+				<tr>
+				<th>Quantity</th>
+				<th>1</th>
+				<th>2 - 3</th>
+				<th>5 - 10</th>
+				<th>10+</th>
+			</tr>
+			</thead>
+
+			<tbody>
+				<tr>
+				<td>Price</td>
+				<td>79.95</td>
+				<td>78.95</td>
+				<td>76.95</td>
+				<td>74.95</td>
+			</tr>
+			</tbody>
+			
+		</table>
 	</main>
 
 	<footer>
