--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,76 @@
-contact us
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Tech store: Contact Us</title>
+	<meta charset="utf-8">
+</head>
+<body>
+
+	<header>
+		<!-- Header -->
+		<h1>Tech Store</h1>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="">Shop</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
+			</ul>
+		</nav>
+	</header>
+	<!-- aside section -->
+	<aside>
+		<h2>Shop by:</h2>
+		<!-- category section -->
+		<section>
+			<h3>Category</h3>
+			<hr>
+		<ul>
+			<li>All Items</li>
+			<li>Cameras</li>
+			<li>Laptops</li>
+			<LI>Phones</LI>
+			<LI>Accesories</LI>
+			<li>Other</li>
+		</ul>
+		</section>
+ 		<!-- prize section -->
+		<section>
+			<h3>Prize ($)</h3>
+			<hr>
+		<ul>
+			<li>1-9</li>
+			<li>10-29</li>
+			<li>30-59</li>
+			<li>60-99</li>
+			<li>100 +</li>
+		</ul>
+		</section>
+	</aside>
+
+	<main>
+		<h2>Contact Us</h2>
+		<form>
+			<div>
+				Name: <input type="text" placeholder="Enter your name">
+			</div>
+			<div>
+				Email: <input type="Email" placeholder="Enter your email">
+			</div>
+			<div>
+				Message: <textarea cols="30" rows="5"></textarea>
+			</div>
+		</form>
+	</main>
+
+	<footer>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="">Shop</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
+			</ul>
+		</nav>
+	</footer>
+
+</body>
+</html>
