--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 				<li><a href="contact.html">Contact Us</a></li>
 			</ul>
 		</nav>
+		<input type="search" name="" placeholder="search...">
 	</header>
 	<!-- aside section -->
 	<aside>
