--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,10 @@
 <head>
 	<title>Tech store: Contact Us</title>
 	<meta charset="utf-8">
+	<link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+
 </head>
 <body>
 
