--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<title>Tech store</title>
 	<meta charset="utf-8">
+	<link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
 <body>
 	<header>
@@ -49,29 +52,29 @@
 	<!-- product section main -->
 	<main>
 			<h2>All items:</h2>
-			<div>
+			<div class="product">
 				<a href="product-detail.html" title="Product details">
 					<img src="img/controller.jpg" alt="game-controller">
 				</a>
 				<h4><a href="product-detail.html">Game Controller</a></h4>
 				<p>$ 79.95</p>
 				<p>Awesome game controller <br> for Xbox</p>
-				<a href="product-detail.html">More Info</a>
-				<a href="">Add To Cart</a>
+				<a href="product-detail.html" class="button">More Info</a>
+				<a href="" class="button">Add To Cart</a>
 			</div>
 			<!-- white headphones -->
-			<div>
+			<div class="product">
 				<a href="product-detail.html" title="Product details">
 					<img src="img/headphones.jpg">
 				</a>
 				<h4><a href="product-detail.html">White Headphones</a></h4>
 				<p>$ 54.95</p>
 				<p>Awesome white headphones</p>
-				<a href="product-detail.html">More Info</a>
-				<a href="">Add To Cart</a>
+				<a href="product-detail.html" class="button">More Info</a>
+				<a href="" class="button">Add To Cart</a>
 			</div>
 			<!-- canon camera -->
-			<div>
+			<div class="product">
 				<a href="product-detail.html" title="Product details">
 					<img src="img/camera.jpg">
 				</a>
@@ -80,11 +83,11 @@
 				</a>
 				<p>$ 649.95</p>
 				<p>Awesome Camera by Canon</p>
-				<a href="product-detail.html">More Info</a>
-				<a href="">Add To Cart</a>
+				<a href="product-detail.html" class="button">More Info</a>
+				<a href=""class="button">Add To Cart</a>
 			</div>
 			<!-- yeti microphone -->
-			<div>
+			<div class="product">
 				<a href="product-detail.html">
 					<img src="img/microphone.jpg" title="Product details">
 				</a>
@@ -93,11 +96,11 @@
 				</a>
 				<p>$ 120.95</p>
 				<p>Awesome Blue Yeti Microphone</p>
-				<a href="product-detail.html">More Info</a>
-				<a href="">Add To Cart</a>
+				<a href="product-detail.html" class="button">More Info</a>
+				<a href="" class="button">Add To Cart</a>
 			</div>
 			<!-- cables -->
-			<div>
+			<div class="product">
 				<a href="product-detail.html">
 					<img src="img/cables.jpg" title="Product details">
 				</a>
@@ -106,21 +109,21 @@
 				</a>
 				<p>$ 10.95</p>
 				<p>Awesome cables available in different lengths</p>
-				<a href="product-detail.html">More Info</a>
-				<a href="">Add To Cart</a>
+				<a href="product-detail.html" class="button">More Info</a>
+				<a href="" class="button">Add To Cart</a>
 			</div>
 			<!-- camera lenses -->
-			<div>
+			<div class="product">
 				<a href="product-detail.html">
 					<img src="img/lenses.jpg" title="Product details">
 				</a>
-				<a href="product-detail.html">
+				<a href="product-detail.html" >
 					<h4>Camera Lenses</h4>
 				</a>
 				<p>$ 99.95</p>
 				<p>Awesome Camera Lenses</p>
-				<a href="product-detail.html">More Info</a>
-				<a href="">Add To Cart</a>
+				<a href="product-detail.html" class="button">More Info</a>
+				<a href="" class="button">Add To Cart</a>
 			</div>
 
 	</main>
