--- a/product-detail.html
+++ b/product-detail.html
@@ -3,6 +3,9 @@
 <head>
 	<title>Tech Store: Product details</title>
 	<meta charset="utf-8">
+	<link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
 <body>
 	<!-- header -->
@@ -48,7 +51,7 @@
 
 	<main>
 		<h2>All items:</h2>
-		<div>
+		<div class="product">
 			<img src="img/controller.jpg">
 			<h4>Game controller</h4>
 			<p>$ 79.95</p>
