finished skill share lessons

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				</a>
 				<h4><a href="product-detail.html">White Headphones</a></h4>
 				<p>$ 54.95</p>
-				<p>Awesome white headphones</p>
+				<p>Awesome <br>white headphones</p>
 				<a href="product-detail.html" class="button">More Info</a>
 				<a href="" class="button">Add To Cart</a>
 			</div>
@@ -82,7 +82,7 @@
 					<h4>Canon Camera</h4>
 				</a>
 				<p>$ 649.95</p>
-				<p>Awesome Camera by Canon</p>
+				<p>Awesome Camera <br>by Canon</p>
 				<a href="product-detail.html" class="button">More Info</a>
 				<a href=""class="button">Add To Cart</a>
 			</div>
@@ -95,7 +95,7 @@
 					<h4>Yeti Microphone</h4>			
 				</a>
 				<p>$ 120.95</p>
-				<p>Awesome Blue Yeti Microphone</p>
+				<p>Awesome Blue <br>Yeti Microphone</p>
 				<a href="product-detail.html" class="button">More Info</a>
 				<a href="" class="button">Add To Cart</a>
 			</div>
@@ -108,7 +108,7 @@
 					<h4>Cables</h4>
 				</a>
 				<p>$ 10.95</p>
-				<p>Awesome cables available in different lengths</p>
+				<p>Awesome cables available <br>in different lengths</p>
 				<a href="product-detail.html" class="button">More Info</a>
 				<a href="" class="button">Add To Cart</a>
 			</div>
@@ -130,7 +130,7 @@
 	<!-- footer -->
 	<footer>
 		<nav>
-			<ul>
+			<ul id="horizontal-list">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="">Shop</a></li>
 				<li><a href="contact.html">Contact Us</a></li>
