--- a/product-detail.html
+++ b/product-detail.html
@@ -51,13 +51,13 @@
 
 	<main>
 		<h2>All items:</h2>
-		<div class="product">
+		<div class="product-detail-2">
 			<img src="img/controller.jpg">
 			<h4>Game controller</h4>
 			<p>$ 79.95</p>
 			<p>Awesome game controller <br> for xbox!</p>
 			<a href="">More Info</a>
-			<a href="">Add To Cart</a>
+			<a href="" class="button">Add To Cart</a>
 		</div>
 
 		<table>
