--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<title>Tech store</title>
+	<meta name="viewport" content="width=device-width" initial-scale="1">
 	<meta charset="utf-8">
 	<link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
